Fix homepage overflow

--- a/css/layouts/_hero.scss
+++ b/css/layouts/_hero.scss
@@ -9,7 +9,7 @@
   pointer-events: initial;
 }
 
-.row.panel-row {
+.panel-row {
   flex-wrap: nowrap;
   overflow-x: scroll;
   min-height: 90vh;
